--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,11 @@ td {
   display: flex;
   flex-direction: row;
   margin: auto;
+  font-size: 1rem;
 }
 div > #message {
   background: #f0f0f0;
-  font-size: 0.6rem;
+  font-size: 1rem;
   flex: 1 auto;
   text-align: center;
   margin: 5px;
@@ -191,12 +192,10 @@ button[type="submit"]:not(.disabled):active {
     padding: 2rem;
     margin: 0rem;
   }
-
-  #app > div {
-    font-size: 2.1rem;
+  #message {
+    font-size: 0.45rem;
   }
-  h2,
-  h3 {
+  #message > h3 {
     font-size: 1rem;
   }
 
@@ -216,4 +215,5 @@ button[type="submit"]:not(.disabled):active {
     color: #333;
     font-size: 0.9rem;
   }
+ 
 }
